# yart

./: .gitignore  Cargo.toml  LICENSE  README.md  config.toml
_scenes/bunny/: bunny.toml
golden_images/: red_sphere.ppm  sphere_with_ground.ppm  two_spheres.ppm
golden_images/images/: bunny.ppm  sphere_normals.ppm  two_spheres.ppm
golden_images/scenes/: bunny.toml  red_sphere.toml  sphere_normals.toml  sphere_with_ground.toml  two_spheres.toml
src/: color.rs  config.rs  editor.rs  lib.rs  main.rs  math.rs  progressbar.rs  world.rs
src/gui/: dialogs.rs  editor.rs  mod.rs  property_editors.rs  shortcuts.rs  utils.rs  widgets.rs
src/math/: geometry.rs  interval.rs  mod.rs  ray.rs  shapes.rs  vector.rs
src/mesh/: mesh.rs  mod.rs
src/rendering/: camera.rs  image.rs  material.rs  mod.rs  renderer.rs  sampler.rs  sky.rs
tests/: golden_tests.rs
tests/common/: golden.rs  mod.rs
