[package]
name = "yart"
version = "0.1.0"
edition = "2024"

[dependencies]
colog = "1.4.0"
eframe = "0.33"
egui_extras = "0.33"
image = "0.25"
log = "0.4.29"
rand = { version = "0.9.0", features = ["std"] }
rand_chacha = "0.3"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
